[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu_clean.gd" id="1"]

[node name="MainMenuClean" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
text = "ROTAENOT"
theme_override_font_sizes/font_size = 96
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
text = "RHYTHM EXPERIENCE"
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
text = "START"

[node name="SettingsButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 60)
text = "QUIT"

[node name="QuitConfirmDialog" type="AcceptDialog" parent="."]
title = "Confirm Exit"
size = Vector2i(400, 150)
dialog_text = "Are you sure you want to quit?"